service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: django
  labels:
    app: django-app
spec:
  type: LoadBalancer
  selector:
    app: django-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
